sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__in-clause-multiple-values.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity
      FROM events
      WHERE event_type IN ('ERROR', 'WARNING', 'CRITICAL');
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH events USING INDEX idx_events_type (event_type=?)
