sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__in-list-collation-match-explicit-nocase.snap
---
source: indexes.sqltest
expression: SELECT id FROM collated_values WHERE val COLLATE NOCASE IN ('hello');
info:
  statement_type: SELECT
  tables:
  - collated_values
  setup_blocks:
  - collated-index-mismatch
  database: ':memory:'
---
QUERY PLAN
`--SCAN collated_values
