sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__in-list-composite-prefix.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, customer_id, order_date
      FROM orders
      WHERE customer_id IN (100, 200, 300);
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH orders USING COVERING INDEX idx_orders_customer_date (customer_id=?)
