sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__in-list-index-seek.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity
      FROM events
      WHERE event_type IN ('ERROR', 'WARNING');
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH events USING INDEX idx_events_type (event_type=?)
