sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__in-list-no-index-scan.snap
---
source: indexes.sqltest
expression: SELECT id, level, message FROM logs WHERE level IN ('ERROR', 'WARNING');
info:
  statement_type: SELECT
  tables:
  - logs
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN logs
