sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-correlated-max-materialized-cte-bytecode.snap
---
source: indexes.sqltest
expression: |-
  WITH prices(price) AS MATERIALIZED (
          SELECT price FROM products
      )
      SELECT (
          SELECT MAX(p2.price)
          FROM prices p2
          WHERE p2.price < p1.price
      )
      FROM prices p1
      WHERE p1.price < 100;
info:
  statement_type: WITH (CTE)
  tables:
  - prices
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--MATERIALIZE prices
|  `--SCAN products USING COVERING INDEX idx_products_price
|--SCAN prices AS p1
`--CORRELATED SCALAR SUBQUERY 1
   `--SCAN prices AS p2

BYTECODE
addr  opcode             p1  p2  p3  p4           p5  comment
   0    Init              0  38   0                0  Start at 38
   1    Once             11   0   0                0  goto 11
   2    OpenEphemeral     0   1   0                0  cursor=0 is_table=true
   3    OpenRead          1   5   0  k(2,B)        0  index=idx_products_price, root=5, iDb=0
   4    Rewind            1  11   0                0  Rewind index idx_products_price
   5      Column          1   0   3                0  r[3]=idx_products_price.price
   6      RealAffinity    3   0   0                0
   7      MakeRecord      3   1   4                0  r[4]=mkrec(r[3..3]); for
   8      NewRowid        0   5   0                0  r[5]=rowid
   9      Insert          0   4   5                4  intkey=r[5] data=r[4]
  10    Next              1   5   0                1
  11    Rewind            0  37   0                0  Rewind  ephemeral()
  12      Column          0   0   2                0  r[2]=ephemeral().price
  13      Copy            2   8   0                0  r[8]=r[2]
  14      Ge              8   9  36  Binary        0  if r[8]>=r[9] goto 36
  15      BeginSubrtn    10   0   0                0  r[10]=NULL
  16      Null            0   1   0                0  r[1]=NULL
  17      OpenDup         2   0   0                0  new_cursor=2, original_cursor=0
  18      Null            0  13   0                0  r[13]=NULL
  19      Integer         1  14   0                0  r[14]=1; LIMIT counter
  20      IfNot          14  30   0                0  if !r[14] goto 30
  21      Last            2  30   0                0
  22        Column        2   0  11                0  r[11]=ephemeral().price
  23        Copy         11  16   0                0  r[16]=r[11]
  24        Copy          2  17   0                0  r[17]=r[2]
  25        Ge           16  17  29  Binary        0  if r[16]>=r[17] goto 29
  26        Copy         11  18   0                0  r[18]=r[11]
  27        AggStep       0  18  13  max(Binary)   0  accum=r[13] step(r[18])
  28        Goto          0  30   0                0
  29      Prev            2  22   0                0
  30      AggFinal        0  13   0  max           0  accum=r[13]
  31      Copy           13  12   0                0  r[12]=r[13]
  32      Copy           12   1   0                0  r[1]=r[12]
  33    Return           10   0   1                0
  34    Copy              1   6   0                0  r[6]=r[1]
  35    ResultRow         6   1   0                0  output=r[6]
  36  Next                0  12   0                0
  37  Halt                0   0   0                0
  38  Transaction         0   1  14                0  iDb=0 tx_mode=Read
  39  Integer           100   9   0                0  r[9]=100
  40  Goto                0   1   0                0
