sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-max-bytecode.snap
---
source: indexes.sqltest
expression: SELECT MAX(price) FROM products;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING COVERING INDEX idx_products_price

BYTECODE
addr  opcode          p1  p2  p3  p4           p5  comment
   0  Init             0  13   0                0  Start at 13
   1  Null             0   2   0                0  r[2]=NULL
   2  OpenRead         0   5   0  k(2,B)        0  index=idx_products_price, root=5, iDb=0
   3  Last             0   9   0                0
   4    Column         0   0   3                0  r[3]=idx_products_price.price
   5    RealAffinity   3   0   0                0
   6    AggStep        0   3   2  max(Binary)   0  accum=r[2] step(r[3])
   7    Goto           0   9   0                0
   8  Prev             0   4   0                1
   9  AggFinal         0   2   0  max           0  accum=r[2]
  10  Copy             2   1   0                0  r[1]=r[2]
  11  ResultRow        1   1   0                0  output=r[1]
  12  Halt             0   0   0                0
  13  Transaction      0   1  14                0  iDb=0 tx_mode=Read
  14  Goto             0   1   0                0
